# plvision_complex_linux_project_homework

./: Makefile.am  configure.ac
calculator/: Makefile.am  main.c
calculator/calc/: Makefile.am
calculator/calc/include/: calc.h
calculator/calc/src/: calc.c
